// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography inherit size render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
    >
      Inherit font size
    </p>
  </div>
</div>
`;

exports[`Typography renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
    >
      Just Typography
    </p>
  </div>
</div>
`;

exports[`Typography variant heading small render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <h4
      class="m-0 text-md text-black font-semibold"
    >
      Heading small
    </h4>
  </div>
</div>
`;
